force-app/main/default/objects/Foyer_paneliste__c/fields/Statut_Audimetrique__c.field-meta.xml
<CustomField>
    <fullName>Statut_Audimetrique__c</fullName>
    <label>Statut Audimétrique</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Présent</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>En vacances</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Absent</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Non répondant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>