force-app/main/default/objects/Foyer_paneliste__c/fields/Statut_Foyer_paneliste__c.field-meta.xml
<CustomField>
    <fullName>Statut_Foyer_paneliste__c</fullName>
    <label>Statut Foyer Panéliste</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Foyer_equipe__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Recruté</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Installé</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Equipé</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Intégré</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Désinstallé</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Chute temporaire</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Chute définitive</label>
            </value>
            <value>
                <fullName>Chute définitive et désinstallé</fullName>
                <isActive>false</isActive>
                <label>Chute définitive et désinstallé</label>
            </value>
            <value>
                <fullName>Désinstallé actif</fullName>
                <isActive>false</isActive>
                <label>Désinstallé actif</label>
            </value>
            <value>
                <fullName>Recruté en attente d&apos;installation</fullName>
                <isActive>false</isActive>
                <label>Recruté en attente d&apos;installation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>