force-app/main/default/objects/Foyer_paneliste__c/fields/Suspendu__c.field-meta.xml
<CustomField>
    <fullName>Suspendu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspendu</label>
    <type>Checkbox</type>
</CustomField>