force-app/main/default/objects/Foyer_paneliste__c/fields/Switch__c.field-meta.xml
<CustomField>
    <fullName>Switch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Switch</label>
    <type>Checkbox</type>
</CustomField>