force-app/main/default/objects/Foyer_paneliste__c/fields/Synchronisation_tiers__c.field-meta.xml
<CustomField>
    <fullName>Synchronisation_tiers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Synchronisation tiers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>