force-app/main/default/objects/Foyer_paneliste__c/fields/Tech_AnonymiserChute3ans__c.field-meta.xml
<CustomField>
    <fullName>Tech_AnonymiserChute3ans__c</fullName>
    <formula>(TODAY() - Date_de_chute__c ) &gt;= 366*3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_AnonymiserChute3ans</label>
    <type>Checkbox</type>
</CustomField>