force-app/main/default/objects/Foyer_paneliste__c/fields/Tech_AnonymiserCreation2ans__c.field-meta.xml
<CustomField>
    <fullName>Tech_AnonymiserCreation2ans__c</fullName>
    <formula>(TODAY() - Date_de_creation__c ) &gt;= 366*2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_AnonymiserCreation2ans</label>
    <type>Checkbox</type>
</CustomField>