force-app/main/default/objects/Foyer_paneliste__c/fields/TECH_BypassWF__c.field-meta.xml
<CustomField>
    <fullName>TECH_BypassWF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_BypassWF</label>
    <type>Checkbox</type>
</CustomField>