force-app/main/default/objects/Foyer_paneliste__c/fields/TECH_DateChuteSup__c.field-meta.xml
<CustomField>
    <fullName>TECH_DateChuteSup__c</fullName>
    <description>Determine if date de chute is superior to 3 years</description>
    <formula>IF( ((YEAR( TODAY()) - YEAR( Date_de_chute__c ))*12 ) + (MONTH( TODAY() ) - MONTH( Date_de_chute__c ))  &gt; 36, TRUE, FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_DateChuteSup</label>
    <type>Checkbox</type>
</CustomField>