force-app/main/default/objects/Foyer_paneliste__c/fields/Tech_FP_Anonym_SF__c.field-meta.xml
<CustomField>
    <fullName>Tech_FP_Anonym_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_FP_Anonym_SF</label>
    <type>Checkbox</type>
</CustomField>