force-app/main/default/objects/Foyer_paneliste__c/fields/Tech_NbAnneesChute__c.field-meta.xml
<CustomField>
    <fullName>Tech_NbAnneesChute__c</fullName>
    <formula>(TODAY()- Date_de_chute__c)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_NbAnnéesChute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>