force-app/main/default/objects/Foyer_paneliste__c/fields/TECH_NombreAnneeDepuisCreation__c.field-meta.xml
<CustomField>
    <fullName>TECH_NombreAnneeDepuisCreation__c</fullName>
    <formula>(TODAY() - Date_de_creation__c )/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_NombreAnneeDepuisCreation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>