force-app/main/default/objects/Foyer_paneliste__c/fields/TECH_TypePanel__c.field-meta.xml
<CustomField>
    <fullName>TECH_TypePanel__c</fullName>
    <formula>TEXT(Referentiel_Panel__r.Type_de_panel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_TypePanel</label>
    <type>Text</type>
</CustomField>