force-app/main/default/objects/Foyer_paneliste__c/fields/Type_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Type_d_intervention__c</fullName>
    <label>Type d&apos;intervention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Installation</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Désinstallation</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Dépannage/Support</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>