force-app/main/default/objects/Foyer_paneliste__c/fields/Vague_de_l_etude__c.field-meta.xml
<CustomField>
    <fullName>Vague_de_l_etude__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vague de l&apos;étude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>