force-app/main/default/objects/Foyer_paneliste__c/recordTypes/AIP.recordType-meta.xml
<RecordType>
    <fullName>AIP</fullName>
    <active>true</active>
    <label>AIP</label>
</RecordType>