force-app/main/default/objects/Foyer_paneliste__c/recordTypes/Mediamat_PaMe.recordType-meta.xml
<RecordType>
    <fullName>Mediamat_PaMe</fullName>
    <active>true</active>
    <label>Médiamat / PaMe</label>
</RecordType>