force-app/main/default/objects/Foyer_paneliste__c/validationRules/RV04_modification_foyer_panel_impossible.validationRule-meta.xml
<ValidationRule>
    <fullName>RV04_modification_foyer_panel_impossible</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
!$User.Bypass_validation_rules__c,
				!$User.Bypass_RDD__c,
TEXT(PRIORVALUE(Statut_Foyer_paneliste__c)) = $Label.PAN_Statut_Panel_Chute_definitive,  
$Profile.Name != $Label.PROFILE_Supervieur_prm, 
 TODAY() - (Date_de_chute__c) &gt; 70, 
 A_anonymiser__c  = false
)</errorConditionFormula>
    <errorMessage>Un foyer panéliste chuté n’est plus modifiable.</errorMessage>
</ValidationRule>