force-app/main/default/objects/Foyer_paneliste__c/validationRules/RV06_date_d_integration_requise.validationRule-meta.xml
<ValidationRule>
    <fullName>RV06_date_d_integration_requise</fullName>
    <active>true</active>
    <description>Un foyer panéliste ne peut passer au statut équipé que si la date d&apos;intégration est renseignée</description>
    <errorConditionFormula>AND(
!$User.Bypass_validation_rules__c,
 RecordType.Name &lt;&gt; $Label.PAN_recordType_AIP,
TEXT(Statut_Foyer_paneliste__c) = $Label.PAN_Statut_Panel_Equipe,
ISBLANK(Date_d_integration__c)
)</errorConditionFormula>
    <errorMessage>Un foyer panéliste ne peut passer au statut équipé que si la date d&apos;intégration est renseignée.</errorMessage>
</ValidationRule>