force-app/main/default/objects/Foyer_paneliste__c/validationRules/RV09_dateFreeze_passe_futur_non_possible.validationRule-meta.xml
<ValidationRule>
    <fullName>RV09_dateFreeze_passe_futur_non_possible</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Bypass_validation_rules__c,
				! $User.Bypass_RDD__c,
( Date_de_Freeze__c &lt; TODAY ())  
||
(Date_de_Freeze__c &gt; TODAY ()), 
				 OR(
        ISNEW(),
        ISCHANGED(Date_de_Freeze__c ) 
       )
)</errorConditionFormula>
    <errorMessage>Merci de renseigner la date de freeze avec la date du jour.</errorMessage>
</ValidationRule>