force-app/main/default/objects/Foyer_paneliste__c/validationRules/RV10_DateFreeze_Obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>RV10_DateFreeze_Obligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Bypass_validation_rules__c,
 Freeze__c = True, 
 ISBLANK (Date_de_Freeze__c ) 
)</errorConditionFormula>
    <errorMessage>La date de freeze est obligatoire si la case freeze est cochée.</errorMessage>
</ValidationRule>