force-app/main/default/objects/Foyer_paneliste__c/validationRules/RV11_Motif_Suspension_Obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>RV11_Motif_Suspension_Obligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Bypass_validation_rules__c,
!$User.Bypass_RDD__c,
 Suspendu__c = True, 
 ISBLANK (TEXT (Motif_de_suspension__c))
)</errorConditionFormula>
    <errorMessage>Le motif de suspension est obligatoire si le foyer est suspendu</errorMessage>
</ValidationRule>