force-app/main/default/objects/Foyer_paneliste__c/validationRules/RV16_setmeter_true_AIP.validationRule-meta.xml
<ValidationRule>
    <fullName>RV16_setmeter_true_AIP</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName  &lt;&gt; &apos;AIP&apos;, Equipement_set_meter__c = true)</errorConditionFormula>
    <errorMessage>Equipement Set Meter ne doit être à true que pour des foyers AIP</errorMessage>
</ValidationRule>