force-app/main/default/objects/Foyer_paneliste__c/listViews/Foyer_pnl_AIP_sans_statut_audim.listView-meta.xml
<ListView>
    <fullName>Foyer_pnl_AIP_sans_statut_audim</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_d_installation__c</columns>
    <columns>Date_de_descente__c</columns>
    <columns>Date_dernier_changement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Referentiel_Panel__c</field>
        <operation>contains</operation>
        <value>aip</value>
    </filters>
    <filters>
        <field>A_anonymiser__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Statut_Audimetrique__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Statut_Foyer_paneliste__c</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <label>Foyer pnl AIP sans statut audim</label>
</ListView>