force-app/main/default/objects/Foyer_paneliste__c/listViews/Foyer_suspendus_60J.listView-meta.xml
<ListView>
    <fullName>Foyer_suspendus_60J</fullName>
    <columns>NAME</columns>
    <columns>Statut_Foyer_paneliste__c</columns>
    <columns>Date_de_suspension__c</columns>
    <columns>Suspendu__c</columns>
    <columns>Motif_de_suspension__c</columns>
    <columns>Statut_Audimetrique__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut_Foyer_paneliste__c</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <filters>
        <field>Referentiel_Panel__c</field>
        <operation>contains</operation>
        <value>aip</value>
    </filters>
    <filters>
        <field>Suspendu__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>9000043</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>9000044</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>9000047</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>9000054</value>
    </filters>
    <filters>
        <field>Date_de_suspension__c</field>
        <operation>equals</operation>
        <value>N_DAYS_AGO:60</value>
    </filters>
    <label>Foyer suspendus +60J</label>
</ListView>