force-app/main/default/objects/Foyer_paneliste__c/listViews/Foyers_AIP_install_s_non_descendus.listView-meta.xml
<ListView>
    <fullName>Foyers_AIP_install_s_non_descendus</fullName>
    <columns>NAME</columns>
    <columns>Date_de_descente__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Referentiel_Panel__c</field>
        <operation>equals</operation>
        <value>AIP</value>
    </filters>
    <filters>
        <field>Date_d_installation__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Date_de_descente__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Statut_Foyer_paneliste__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Foyers AIP installés non descendus</label>
</ListView>