force-app/main/default/objects/Foyer_paneliste__c/listViews/Foyers_AIP_Welcome_Call.listView-meta.xml
<ListView>
    <fullName>Foyers_AIP_Welcome_Call</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Vague_de_l_etude__c</columns>
    <columns>Statut_Audimetrique__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Referentiel_Panel__c</field>
        <operation>equals</operation>
        <value>AIP</value>
    </filters>
    <filters>
        <field>Statut_Foyer_paneliste__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Statut_Foyer_paneliste__c</field>
        <operation>notEqual</operation>
        <value>1,3,4,6,5</value>
    </filters>
    <filters>
        <field>Nom_pilote__c</field>
        <operation>notEqual</operation>
        <value>ROAV3</value>
    </filters>
    <label>Foyers AIP Welcome Call</label>
</ListView>