force-app/main/default/objects/Foyer_paneliste__c/listViews/Foyers_chut_s_temporairement.listView-meta.xml
<ListView>
    <fullName>Foyers_chut_s_temporairement</fullName>
    <columns>NAME</columns>
    <columns>Nom_pilote__c</columns>
    <columns>Date_de_creation__c</columns>
    <columns>Date_de_suspension__c</columns>
    <columns>Date_de_chute_temporaire__c</columns>
    <columns>Motif_de_chute__c</columns>
    <columns>Statut_Foyer_paneliste__c</columns>
    <columns>Statut_Audimetrique__c</columns>
    <columns>Date_de_descente__c</columns>
    <columns>Date_dernier_changement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Referentiel_Panel__c</field>
        <operation>contains</operation>
        <value>AIP</value>
    </filters>
    <filters>
        <field>Statut_Foyer_paneliste__c</field>
        <operation>equals</operation>
        <value>6</value>
    </filters>
    <label>Foyers chutés temporairement AIP</label>
</ListView>