force-app/main/default/objects/Foyer_paneliste__c/listViews/Foyers_pan_listes_AIP.listView-meta.xml
<ListView>
    <fullName>Foyers_pan_listes_AIP</fullName>
    <columns>NAME</columns>
    <columns>Statut_Foyer_paneliste__c</columns>
    <columns>Nombre_de_set_meters__c</columns>
    <columns>Vague_de_l_etude__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Foyer_equipe__c</columns>
    <columns>Date_dernier_changement__c</columns>
    <columns>Suspendu__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Foyer__c</field>
        <operation>notContain</operation>
        <value>anonymi</value>
    </filters>
    <filters>
        <field>Referentiel_Panel__c</field>
        <operation>contains</operation>
        <value>AIP</value>
    </filters>
    <filters>
        <field>Nom_pilote__c</field>
        <operation>notContain</operation>
        <value>Roa</value>
    </filters>
    <filters>
        <field>Statut_Foyer_paneliste__c</field>
        <operation>equals</operation>
        <value>3,6</value>
    </filters>
    <label>Foyers panélistes AIP</label>
    <sharedTo>
        <role>MM</role>
    </sharedTo>
</ListView>