force-app/main/default/objects/Foyer_paneliste__c/listViews/Foyers_pan_listes_AIP_suspendus.listView-meta.xml
<ListView>
    <fullName>Foyers_pan_listes_AIP_suspendus</fullName>
    <columns>NAME</columns>
    <columns>Statut_Foyer_paneliste__c</columns>
    <columns>Date_de_suspension__c</columns>
    <columns>Motif_de_suspension__c</columns>
    <columns>Statut_Audimetrique__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Motif_de_chute__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Foyer__c</field>
        <operation>notContain</operation>
        <value>anonymi</value>
    </filters>
    <filters>
        <field>Referentiel_Panel__c</field>
        <operation>contains</operation>
        <value>AIP</value>
    </filters>
    <filters>
        <field>Suspendu__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Statut_Foyer_paneliste__c</field>
        <operation>equals</operation>
        <value>0,1,3</value>
    </filters>
    <filters>
        <field>Foyer__c</field>
        <operation>notContain</operation>
        <value>Bianco</value>
    </filters>
    <filters>
        <field>Foyer__c</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <filters>
        <field>A_anonymiser__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Motif_de_suspension__c</field>
        <operation>equals</operation>
        <value>203</value>
    </filters>
    <label>Foyers panélistes AIP suspendus</label>
</ListView>