force-app/main/default/objects/Foyer_paneliste__c/listViews/Foyers_pan_listes_MMAT.listView-meta.xml
<ListView>
    <fullName>Foyers_pan_listes_MMAT</fullName>
    <columns>Foyer__c</columns>
    <columns>NAME</columns>
    <columns>Date_de_creation__c</columns>
    <columns>Statut_Foyer_paneliste__c</columns>
    <columns>Freeze__c</columns>
    <columns>Date_de_Freeze__c</columns>
    <columns>Statut_Audimetrique__c</columns>
    <columns>Date_dernier_changement__c</columns>
    <columns>Date_de_suspension__c</columns>
    <columns>Date_de_chute__c</columns>
    <columns>Date_de_descente__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Foyer__c</field>
        <operation>notContain</operation>
        <value>anonymi</value>
    </filters>
    <filters>
        <field>Referentiel_Panel__c</field>
        <operation>notContain</operation>
        <value>pam</value>
    </filters>
    <filters>
        <field>Referentiel_Panel__c</field>
        <operation>notContain</operation>
        <value>aip</value>
    </filters>
    <filters>
        <field>Statut_Foyer_paneliste__c</field>
        <operation>notEqual</operation>
        <value>4,6,5</value>
    </filters>
    <label>Foyers panélistes MMAT</label>
</ListView>