force-app/main/default/objects/Foyer_paneliste__c/listViews/Foyers_pan_listes_MMAT_int_grer.listView-meta.xml
<ListView>
    <fullName>Foyers_pan_listes_MMAT_int_grer</fullName>
    <columns>Foyer__c</columns>
    <columns>NAME</columns>
    <columns>Date_de_creation__c</columns>
    <columns>Statut_Foyer_paneliste__c</columns>
    <columns>Freeze__c</columns>
    <columns>Date_de_Freeze__c</columns>
    <columns>Statut_Audimetrique__c</columns>
    <columns>Date_dernier_changement__c</columns>
    <columns>Date_de_suspension__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Referentiel_Panel__c</field>
        <operation>contains</operation>
        <value>MMT</value>
    </filters>
    <filters>
        <field>Foyer__c</field>
        <operation>notContain</operation>
        <value>anonymi</value>
    </filters>
    <filters>
        <field>Date_de_descente__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Date_d_installation__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Statut_Foyer_paneliste__c</field>
        <operation>notEqual</operation>
        <value>4,6,5</value>
    </filters>
    <filters>
        <field>Date_d_integration__c</field>
        <operation>equals</operation>
    </filters>
    <label>Foyers panélistes MMAT non intégrés</label>
</ListView>