force-app/main/default/objects/Foyer_paneliste__c/listViews/Foyers_pan_listes_MMAT_recrut_s.listView-meta.xml
<ListView>
    <fullName>Foyers_pan_listes_MMAT_recrut_s</fullName>
    <columns>Foyer__c</columns>
    <columns>Foyer_equipe__c</columns>
    <columns>NAME</columns>
    <columns>Date_de_creation__c</columns>
    <columns>Statut_Foyer_paneliste__c</columns>
    <columns>Membre_du_foyer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Referentiel_Panel__c</field>
        <operation>contains</operation>
        <value>MMT</value>
    </filters>
    <filters>
        <field>Foyer__c</field>
        <operation>notContain</operation>
        <value>anonymi</value>
    </filters>
    <filters>
        <field>Statut_Foyer_paneliste__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Foyers panélistes MMAT recrutés</label>
</ListView>